@@ -87,6 +87,8 @@ Release 0.19.0 - Unreleased
    HBASE-949   Add an HBase Manual
    HBASE-839   Update hadoop libs in hbase; move hbase TRUNK on to an hadoop
                0.19.0 RC
+   HBASE-785   Remove InfoServer, use HADOOP-3824 StatusHttpServer 
+               instead (requires hadoop 0.19)
     
   NEW FEATURES
    HBASE-875   Use MurmurHash instead of JenkinsHash [in bloomfilters]
